--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>shotcut</title>
+    <title>天择短秀</title>
+    <!-- <script src="videojs-contrib-hls/dist/videojs-contrib-hls.js"> -->
   </head>
   <body>
     <div id="app"></div>
